@@ -1,1 +1,20 @@
 # ProjetGenieLogiciel
+
+Bonjour,
+
+Notre projet a pour but de reconstituer une image divisée en plusieurs fichiers image représentant chacun une pièce de puzzle. Pour l'utiliser correctement,
+Vous trouverez les différentes instructions et commandes nécéssaires à son bon fonctionnement.
+
+Tout d'abord, il vous faudra vous rendre dans le dossier racine du projet, nommé ProjetGenieLogiciel.
+
+Dans le dossier "doc", vous trouverez la documentation du projet, générée par nos soins. Si vous voulez la générer par vous-même, il vous faudra entrer la commande suivante : 'javadoc -d doc --module-path "C:/javafx/lib" --add-modules javafx.controls,javafx.graphics,javafx.swing --source-path src src/module-info.java src/application/*.java src/classes/*.java'.
+
+Pour lancer le projet, il faudra le compiler puis l'éxécuter avec les commandes suivantes :
+COMPILATION : javac --module-path "C:/javafx/lib" --add-modules javafx.controls,javafx.graphics,javafx.swing,javafx.fxml -d out $(find src -name "*.java")
+EXECUTION : java --module-path "C:/javafx/lib;out" --add-modules javafx.controls,javafx.graphics,javafx.swing,javafx.fxml -m Projet/application.Main
+
+Une fois le puzzle résolu, vous aurez l'image finale qui s'affichera, le nombre de tentatives pour la résoudre ainsi qu'un bouton proposant l'enregistrement de cette dernière.
+
+En espérant que cela vous ait été utile.
+
+Bonne journée !
